Fixed alignment errors in navbars, fixed httpnotfound exceptions

--- a/public/css/record.css
+++ b/public/css/record.css
@@ -48,8 +48,8 @@ body {
     background-color: #13a37f;
     height: 50px;
     font-size: 14px;
-    padding-top: 5px;
     padding-right: 5px;
+    vertical-align: middle;
 }
 
 .navbar-toolbar {
@@ -168,7 +168,7 @@ body {
     margin-left: 10px;
     font-size: 25px;
     color: white;
-    padding-top: 0px;
+    padding-top: 5px;
     padding-right: 0px;
 }
 
@@ -468,6 +468,7 @@ table.dataTable thead .sorting:after {
 }
 
 .user-toggle:hover{
-	color: #000 !important;
+	color: #fff !important;
+    background-color: rgba(255,255,255,.2) !important;
 }
 
